<resources>
    <string name="app_name">Quill</string>
    <string name="title_txt">Scribble the Journey</string>
    <string name="grateful_txt">What are you grateful for today?</string>
    <string name="get_started_txt">Get started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_txt">Login</string>
    <string name="or_txt">or</string>
    <string name="create_account_txt">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="journal_title_txt">Title</string>
    <string name="your_thoughs_txt">Your thoughs.....</string>
    <string name="save_txt">Save</string>
    <string name="image_for_journal_txt">Image for journal</string>
    <string name="camera_button_to_add_images">Camera button to add images.</string>
    <string name="sample_username_txt">Smith</string>
    <string name="sample_date_txt">Today</string>
    <string name="pick_your_choice_txt">Choose media</string>
    <string name="camera_txt">Camera</string>
    <string name="gallery_txt">Gallery</string>
    <string name="cancel">cancel</string>
    <string name="mandatory_warning">All fields are mandatory</string>
    <string name="failure_message_txt">Oops... Something went wrong.</string>
    <string name="invalid_user">Invalid email or password</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="sign_out_txt">Sign-out</string>
    <string name="no_thoughts_found">No thoughts found. Click setting to create new thoughts</string>
    <string name="share_txt">Share</string>
</resources>
