<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/create_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/create_app_moto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:gravity="center"
        android:text="@string/title_txt" />

    <ProgressBar
        android:id="@+id/create_acc_progress"
        style="?android:progressBarStyleLarge"
        android:layout_width="43dp"
        android:layout_height="42dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/acc_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/create_username_account"
            android:hint="@string/username_hint"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_height="wrap_content" />
        <AutoCompleteTextView
            android:layout_marginTop="15dp"
            android:id="@+id/create_email_account"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/create_password_account"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/transparent_button_with_border"
            android:text="@string/create_account_txt"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>