<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pick_your_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/pick_your_choice_txt"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/camera_cardview"
        android:padding="8dp">

        <ImageView
            android:id="@+id/dialog_camera_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/camera_button_to_add_images"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/dialog_camera_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dialog_camera_img"
            android:layout_alignBottom="@+id/dialog_camera_img"
            android:layout_toEndOf="@+id/dialog_camera_img"
            android:gravity="center"
            android:text="@string/camera_txt"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gallery_cardview"
        android:padding="8dp">

        <ImageView
            android:id="@+id/dialog_gallery_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/camera_button_to_add_images"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/dialog_gallery_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dialog_gallery_id"
            android:layout_alignBottom="@+id/dialog_gallery_id"
            android:layout_toEndOf="@+id/dialog_gallery_id"
            android:gravity="center"
            android:text="@string/gallery_txt"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>